# repeated-prisoners-dilemma

./: .gitignore  .gitleaksignore  .gitpod.Dockerfile  .mise.audit.toml  .mise.ci.toml  .mise.toml  .pre-commit-config.yaml  .releaserc.yaml  .releaserc.yml  .secrets.baseline  .yamlfmt.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  REUSE.toml  ROADMAP.md  SECURITY.md  about.toml  bacon.toml  licenses_report.json  licenses_report.md  mise.toml  nextest.toml  renovate.json
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yaml  ci.yaml  code_coverage.yaml  dependency-review.yaml  deploy_mdbook.yaml  get_next_version.yaml  release.yaml  release_upload.yaml  scorecard.yaml
.mise/tasks/: build-release.sh  deploy_to_vercel.sh  get-next-version.sh
guide/: .gitignore  book.toml
guide/src/: 01-introduction.md  02-getting-started.md  03-cli-tools-tactix-bench.md  03-cli-tools-tactix.md  03-cli-tools.md  04-tui-tools-tactix-ui.md  04-tui-tools.md  05-theoretical-background.md  SUMMARY.md
meta/: LICENSE-HEADER
meta/vale-styles/config/vocabularies/Custom/: accept.txt
scripts/: generate_about_json.sh  generate_about_md.sh
src/dilemma_tactix_lib/: constants.rs  errors.rs  game_options.rs  lib.rs  strategy.rs
src/dilemma_tactix_lib/models/: choice.rs  choice_name_options.rs  game_grid.rs  game_grid_builder.rs  game_option_builder.rs  game_options.rs  mod.rs  number_pair.rs
src/repeated_prisoners_dilemma/: main.rs
src/repeated_prisoners_dilemma_lib/: lib.rs
src/tactix/: cli.rs  main.rs
src/tactix-bench/: cli.rs  main.rs
src/tactix-tui/: main.rs
src/tactix_bench/: main.rs
src/tactix_tui/: app.rs  main.rs  ui.rs
