[package]
name = "dilemma-tactix"
version = "1.0.0-next.2"
edition = "2021"
readme = "README.md"
description = "An iterated prisoners dilemma simulator with a terminal UI"
rust-version = "1.70.0"
repository = "https://github.com/AliSajid/dilemma-tactix"
license = "MIT OR Apache-2.0"

[lib]
name = "dilemma_tactix_lib"
path = "src/dilemma_tactix_lib/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "tactix"
path = "src/tactix/main.rs"

[[bin]]
name = "tactix-bench"
path = "src/tactix-bench/main.rs"

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
clap = { version = "4.4.18", features = ["cargo", "debug", "env", "string", "unicode", "derive"] }
crossterm = { version = "0.27.0", features = ["serde"] }
prettytable-rs = "0.10.0"
rand = { version = "0.8.5", features = ["log", "serde1"] }
ratatui = { version = "0.24.0", features = ["all-widgets", "macros", "serde", "document-features"] }
tokio = { version = "1.28.1", features = ["full"] }


[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
