[package]
name = "dilemma-tactix"
version = "1.2.0"
edition = "2021"
readme = "README.md"
description = "An iterated prisoners dilemma simulator with a terminal UI"
rust-version = "1.72.1"
repository = "https://github.com/AliSajid/dilemma-tactix"
license = "MIT OR Apache-2.0"

[lib]
name = "dilemma_tactix_lib"
path = "src/dilemma_tactix_lib/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "tactix"
path = "src/tactix/main.rs"

[[bin]]
name = "tactix-bench"
path = "src/tactix_bench/main.rs"

[[bin]]
name = "tactix-tui"
path = "src/tactix_tui/main.rs"

[dependencies]
anyhow = { version = "1.0.93", features = ["backtrace"] }
clap = { version = "4.5.21", features = ["string", "unicode", "derive"] }
crossterm = { version = "0.27.0", features = ["serde"] }
prettytable-rs = "0.10.0"
rand = { version = "0.8.5" }
rand_chacha = "0.3.1"
ratatui = { version = "0.27" }
tokio = { version = "1.38.1", features = ["full"] }

[dev-dependencies]
rstest = "0.23.0"

[lints.rustdoc]
broken_intra_doc_links = "deny"
missing_docs = "forbid"
invalid_rust_codeblocks = "deny"
redundant_explicit_links = "deny"

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 'z' # Optimize for size
lto = true # Enable link-time optimization
codegen-units = 1 # Compile the whole crate at once
panic = "abort" # Abort on panic
strip = "symbols" # Strip debug symbols
